--- a/menu-tapilogie.css
+++ b/menu-tapilogie.css
@@ -16,7 +16,7 @@ a{
     padding: 4px;
 }
 a:hover{
-   
+    color: rgb(81, 81, 81);
     text-decoration: none;
    
 }
@@ -41,7 +41,7 @@ a:hover{
 }
 #menu{
  margin:0 4px;
- display: none;
+ 
 }
 #menu ul li{
     border-top: 1px solid #EDEDED;
@@ -81,6 +81,7 @@ a:hover{
     height: 64px;
     padding: 10px 0px;
     flex-wrap: nowrap;
+    margin-bottom:14px;
 }
 .menu-hamburger{
     border-bottom:4px solid rgb(0, 0, 0);
@@ -119,9 +120,25 @@ a:hover{
    
     
 }
-.menu-hamburger:hover{
-    border:none;
+
+
+/*display block itens da lista */
+#menu{
+    height: 0;
+    overflow-y: hidden;
+    visibility: hidden;
+    transition:.3s;
+    overflow-x: hidden;
+    
 }
-.menu-hamburger::after:hover{
-    transform: rotate(-180deg);
+#nav.menu-ativo #menu{
+  visibility: visible;
+  height: 100vh;
+}
+
+/*Estilizando o lista de intens*/
+.nav-item{
+    padding:24px;
+    border-bottom:1px solid #EDEDED;
+    
 }
