--- a/menu-tapilogie.css
+++ b/menu-tapilogie.css
@@ -140,5 +140,10 @@ a:hover{
 .nav-item{
     padding:24px;
     border-bottom:1px solid #EDEDED;
+    display: flex;
+    align-items: center;
     
 }
+
+    
+
