add funcionlaidade ao SubMenu de Outros

--- a/menu-tapilogie.css
+++ b/menu-tapilogie.css
@@ -142,8 +142,20 @@ a:hover{
     border-bottom:1px solid #EDEDED;
     display: flex;
     align-items: center;
+    font-weight: bolder;
     
 }
+
+/*Efeito abre e fecha os itens em outros */
+#sub-menu-items li a{
+   font-weight: 400;
+}
+
+.subMenu-item-ativo{
+ transition: .4s;
+ 
+}
+
 
     
 
